--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -28,8 +28,13 @@ html, body {
 }
 
 .circle-2 {
-    left: 50px;
-    top: 100px;
+    left: 300px;
+    top: 350px;
+}
+
+.circle-3 {
+    left: 200px;
+    top: 370px;
 }
 
 .red {
