--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,6 +3,10 @@ html, body {
     margin: 0;
 }
 
+body.can-not-add {
+    cursor: not-allowed;
+}
+
 .circle {
     width: 100px;
     height: 100px;
